test/CheckError/Move/MoveNonMovableTemplateType.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <typename T>
void moveObject(T object) {
	// CHECK: .loci:8:16: error: template arguments do not satisfy require predicate 'T : movable_t' of method 'move'
	// CHECK: .loci:8:16: note: because: method '__alignmask' not found
	unused_result move object;
}

// CHECK: 1 error generated.
